--- a/agi-cli-platform/config/default.yaml
+++ b/agi-cli-platform/config/default.yaml
@@ -5,18 +5,21 @@ verbose: false
 # LLM Integration Settings
 llm:
   use_direct_api: true
-  providers: ["openai", "anthropic", "local"]  # Priority order
+  providers: ["gemini"]  # Priority order - Gemini only
   timeout: 30
   temperature: 0.7
   max_tokens: 2000
 
-  # OpenAI configuration
+  # Gemini configuration
+  gemini_model: "gemini-2.0-flash"
+
+  # OpenAI configuration (backup)
   openai_model: "gpt-3.5-turbo"
 
-  # Anthropic configuration  
+  # Anthropic configuration (backup)
   anthropic_model: "claude-3-sonnet-20240229"
 
-  # Local LLM configuration
+  # Local LLM configuration (backup)
   local_endpoint: "http://0.0.0.0:11434/api/generate"
   local_model: "llama2"
 
